base/nats/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nats
  labels:
    name: nats
    app.kubernetes.io/name: nats
    app.kubernetes.io/component: messaging
